filters align ok (* resize to fix)

--- a/css/style.css
+++ b/css/style.css
@@ -46,6 +46,7 @@ h2 {
 
 h3 {
   font-size: 1.2em;
+  padding-right: 10px;
 }
 
 h4 {
@@ -135,11 +136,30 @@ label {
 input {
   border: 1px;
   border-color: #f2f2f2;
-  padding: 10px;
+  padding: 10px 0;
+}
+
+.filter-bar {
+  padding: 10px 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.filter {
+  border: 2px solid #d9d9d9;
+  border-radius: 25px;
+  padding: 10px 15px;
+  margin: 0 20px;
+}
+
+.filter:hover {
+  background-color: #deebff;
 }
 
 .fa-solid {
   color: #0065fc;
+  padding-right: 3px;
 }
 
 .fa-solid.fa-location-dot {
@@ -253,6 +273,21 @@ footer {
 
   .fa-magnifying-glass {
     visibility: visible;
+  }
+
+  .filter-bar {
+    display: unset;
+  }
+
+  .filters {
+    margin-top: 20px;
+    display: grid;
+    grid-template-columns: 50% 50%;
+    gap: 20px;
+  }
+
+  .filter {
+    margin: 0;
   }
 
   footer {
